WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146613
InlineCallFrames shouldn't be strongly marked by CodeBlock
https://bugs.webkit.org/show_bug.cgi?id=146613
Summary
InlineCallFrames shouldn't be strongly marked by CodeBlock
Filip Pizlo
Reported
2015-07-04 12:26:19 PDT
In fact, they shouldn't be marked at all, because everything in them should already end up in the weak reference set in DFG::CommonData, since all of those references are FrozenValues in DFG IR.
Attachments
Patch
(5.51 KB, patch)
2015-09-08 17:11 PDT
,
Geoffrey Garen
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-09-08 17:11:49 PDT
Created
attachment 260815
[details]
Patch
Saam Barati
Comment 2
2015-09-08 17:16:01 PDT
Comment on
attachment 260815
[details]
Patch r=me
Geoffrey Garen
Comment 3
2015-09-08 17:20:18 PDT
Committed
r189518
: <
http://trac.webkit.org/changeset/189518
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug