InlineCallFrames shouldn't be strongly marked by CodeBlock https://bugs.webkit.org/show_bug.cgi?id=146613

Reviewed by Saam Barati.

This code was vestigial an unnecessary, so I removed it.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::stronglyVisitStrongReferences):
* bytecode/InlineCallFrame.cpp:
(JSC::InlineCallFrame::calleeConstant):
(JSC::InlineCallFrame::calleeForCallFrame):
(JSC::InlineCallFrame::visitAggregate): Deleted.
* bytecode/InlineCallFrame.h:
(JSC::InlineCallFrame::specializationKind):
* bytecode/InlineCallFrameSet.cpp:
(JSC::InlineCallFrameSet::add):
(JSC::InlineCallFrameSet::visitAggregate): Deleted.
* bytecode/InlineCallFrameSet.h:
(JSC::InlineCallFrameSet::begin):
(JSC::InlineCallFrameSet::end):


Canonical link: https://commits.webkit.org/167072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189518 268f45cc-cd09-0410-ab3c-d52691b4dbfc