Source/JavaScriptCore/bytecode/InlineCallFrame.cpp
@@ -40,20 +40,6 @@ JSFunction* InlineCallFrame::calleeConstant() const
     return nullptr;
 }
 
-void InlineCallFrame::visitAggregate(SlotVisitor& visitor)
-{
-    // FIXME: This is an antipattern for two reasons. References introduced by the DFG
-    // that aren't in the original CodeBlock being compiled should be weakly referenced.
-    // Inline call frames aren't in the original CodeBlock, so they qualify as weak. Also,
-    // those weak references should already be tracked in the DFG as weak FrozenValues. So,
-    // there is probably no need for this. We already have assertions that this should be
-    // unnecessary. Finally, just marking the executable and not anything else in the inline
-    // call frame is almost certainly insufficient for what this method thought it was going
-    // to accomplish.
-    // https://bugs.webkit.org/show_bug.cgi?id=146613
-    visitor.append(&executable);
-}
-
 JSFunction* InlineCallFrame::calleeForCallFrame(ExecState* exec) const
 {
     return jsCast<JSFunction*>(calleeRecovery.recover(exec));
