Source/JavaScriptCore/bytecode/InlineCallFrameSet.cpp
@@ -39,11 +39,5 @@ InlineCallFrame* InlineCallFrameSet::add()
     return m_frames.add();
 }
 
-void InlineCallFrameSet::visitAggregate(SlotVisitor& visitor)
-{
-    for (InlineCallFrame* callFrame : m_frames)
-        callFrame->visitAggregate(visitor);
-}
-    
 } // namespace JSC
 
