Source/JavaScriptCore/bytecode/InlineCallFrameSet.h
@@ -45,8 +45,6 @@ public:
     iterator begin() { return m_frames.begin(); }
     iterator end() { return m_frames.end(); }
 
-    void visitAggregate(SlotVisitor&);
-    
 private:
     Bag<InlineCallFrame> m_frames;
 };
